@startuml

title __MODERAZIONE's Class Diagram__\n

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.moderazione {
        class com.unidates.Unidates.UniDates.View.moderazione.InfoModeratoreCard {
            + InfoModeratoreCard()
            + immagineMod()
            + infoMod()
            + segnalazioniMod()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.moderazione {
        class com.unidates.Unidates.UniDates.View.moderazione.ListaSegnalazioni {
            ~ dettagliSegnalazione : Notification
            ~ notifica : Notification
            ~ notificaAmm : Notification
            + ListaSegnalazioni()
            + cardSegnalazione()
            + createListaSegnalazioni()
            + createNotificaAmmonimento()
            + infoAmmonimento()
            + notificaSospensione()
            - createNotificaDettagliSegnalazione()
            - infoSospensione()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace View.moderazione {
        class com.unidates.Unidates.UniDates.View.moderazione.ModerazionePage {
            + ModerazionePage()
            + create()
        }
      }
    }
  }
  

  com.unidates.Unidates.UniDates.View.moderazione.InfoModeratoreCard -up-|> com.vaadin.flow.component.html.Div
  com.unidates.Unidates.UniDates.View.moderazione.InfoModeratoreCard o-- com.unidates.Unidates.UniDates.DTOs.ModeratoreDTO : moderatore
  com.unidates.Unidates.UniDates.View.moderazione.ListaSegnalazioni -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unidates.Unidates.UniDates.View.moderazione.ListaSegnalazioni o-- com.unidates.Unidates.UniDates.Control.InteractionControl : interactionControl
  com.unidates.Unidates.UniDates.View.moderazione.ListaSegnalazioni o-- com.unidates.Unidates.UniDates.Control.ModerationControl : moderationControl
  com.unidates.Unidates.UniDates.View.moderazione.ListaSegnalazioni o-- com.unidates.Unidates.UniDates.DTOs.ModeratoreDTO : moderatore
  com.unidates.Unidates.UniDates.View.moderazione.ListaSegnalazioni o-- com.unidates.Unidates.UniDates.Control.ModifyProfileControl : modifyProfileControl
  com.unidates.Unidates.UniDates.View.moderazione.ListaSegnalazioni o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl
  com.unidates.Unidates.UniDates.View.moderazione.ModerazionePage -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.unidates.Unidates.UniDates.View.moderazione.ModerazionePage o-- com.unidates.Unidates.UniDates.Control.InteractionControl : interactionControl
  com.unidates.Unidates.UniDates.View.moderazione.ModerazionePage o-- com.unidates.Unidates.UniDates.Control.ModerationControl : moderationControl
  com.unidates.Unidates.UniDates.View.moderazione.ModerazionePage o-- com.unidates.Unidates.UniDates.Control.ModifyProfileControl : modifyProfileControl
  com.unidates.Unidates.UniDates.View.moderazione.ModerazionePage o-- com.unidates.Unidates.UniDates.Control.UserManagementControl : userManagementControl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
